--- a/html/CH8.html
+++ b/html/CH8.html
@@ -51,9 +51,9 @@
             font-weight: 600;
             color: #1d1d1f;
         }
-        .bento-text em {
+        .bento-text em { /* For markdown emphasis */
             font-style: italic;
-            color: #0071e3;
+            color: #555; /* Slightly darker for emphasis */
         }
         .bento-text a {
             color: #0071e3;
@@ -63,12 +63,25 @@
             text-decoration: underline;
         }
         .bento-list {
-            list-style-position: outside;
-            padding-left: 1.5rem;
+            list-style-position: inside;
+            padding-left: 0.5rem;
         }
         .bento-list li {
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.75rem;
+            padding-left: 1rem;
+            position: relative;
         }
+        .bento-list li::before {
+            content: "\f111"; /* Font Awesome circle icon */
+            font-family: "Font Awesome 6 Free";
+            font-weight: 900;
+            color: #0071e3; /* Apple blue */
+            font-size: 0.5rem;
+            position: absolute;
+            left: -0.25rem;
+            top: 0.5em;
+        }
+
         .highlight-tech {
             background: linear-gradient(90deg, rgba(0, 113, 227, 0.15) 0%, rgba(0, 113, 227, 0.05) 100%);
             padding: 0.1rem 0.5rem;
@@ -101,7 +114,6 @@
             .grid-container {
                 grid-template-columns: repeat(3, minmax(0, 1fr));
             }
-             /* Define spans for different boxes on larger screens */
             .col-span-lg-1 { grid-column: span 1 / span 1; }
             .col-span-lg-2 { grid-column: span 2 / span 2; }
             .col-span-lg-3 { grid-column: span 3 / span 3; }
@@ -110,7 +122,6 @@
             .row-span-lg-2 { grid-row: span 2 / span 2; }
         }
 
-        /* Ensure Framer Motion divs take full height of parent bento-box if needed */
         .bento-box > .motion-div-full-height {
             flex-grow: 1;
             display: flex;
@@ -123,8 +134,7 @@
             border-radius: 1.5rem;
             margin-bottom: 2rem;
             box-shadow: 0 2px 4px rgba(0,0,0,0.03);
-            margin: 0 auto;
-            text-align: center;
+            text-align: center; /* Centered text */
         }
         .top-info-title {
             font-size: 2rem; /* 32px */
@@ -140,6 +150,9 @@
         .top-info-text p {
             margin-bottom: 0.5rem;
         }
+        .top-info-text strong { /* Ensure strong inside top-info-text is also bold */
+             font-weight: 700;
+        }
         .top-info-text a {
             color: #0071e3;
             font-weight: 500;
@@ -147,6 +160,15 @@
         }
         .top-info-text a:hover {
             text-decoration: underline;
+        }
+        .chinese-main-title {
+            font-size: 2.8rem; /* Even larger for main Chinese title */
+            font-weight: 700;
+        }
+        .english-subtitle {
+            font-size: 1.5rem; /* Smaller English subtitle */
+            color: #666;
+            font-weight: 400;
         }
     </style>
 </head>
@@ -161,16 +183,18 @@
             <strong>Taiwan’s pioneering and highest deep learning meetup, launched on 2016/11/11 @ 83F, Taipei 101</strong>
             </p>
             <p align="center">
-            AI是一條孤獨且充滿不確定的惶恐旅程，花俏絢麗的收費課程或活動絕非通往成功的捷徑。<br>
+            AI是一條孤獨且充滿惶恐及未知的旅程，花俏絢麗的收費課程或活動絕非通往成功的捷徑。<br>
             衷心感謝當時來自不同單位的AI同好參與者實名分享的寶貴經驗；如欲移除資訊還請告知。<br>
             由 <a href="https://www.twman.org/" target="_blank">TonTon Huang Ph.D.</a> 發起，及其當時任職公司(台灣雪豹科技)無償贊助場地及茶水點心。<br>
             </p>
-            <p align="center">
-            <a href="https://huggingface.co/spaces/DeepLearning101/Deep-Learning-101-FAQ" target="_blank">
-                <img src="https://github.com/Deep-Learning-101/.github/blob/main/images/DeepLearning101.JPG?raw=true" alt="Deep Learning 101" width="180" style="display:inline-block;"></a>
-                 <a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank" style="display:inline-block;">
-                    <img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 100px !important;width: 180px !important; display:inline-block;">
-            </p>
+                <p align="center">
+                    <a href="https://huggingface.co/spaces/DeepLearning101/Deep-Learning-101-FAQ" target="_blank">
+                        <img src="https://github.com/Deep-Learning-101/.github/blob/main/images/DeepLearning101.JPG?raw=true" alt="Deep Learning 101" width="180" style="display:inline-block; border-radius: 10px;">
+                    </a>
+                     <a href="https://www.buymeacoffee.com/DeepLearning101" target="_blank" style="display:inline-block;">
+                        <img src="https://cdn.buymeacoffee.com/buttons/v2/default-red.png" alt="Buy Me A Coffee" style="height: 100px !important;width: 180px !important; display:inline-block; border-radius: 10px;">
+                    </a>
+                </p>
             <p align="center">
             <a href="https://www.youtube.com/@DeepLearning101" target="_blank">YouTube</a> |
             <a href="https://www.facebook.com/groups/525579498272187/" target="_blank">Facebook</a> |
@@ -178,12 +202,8 @@
             <a href="http://DeepLearning101.TWMAN.ORG" target="_blank">網站</a> |
             <a href="https://huggingface.co/DeepLearning101" target="_blank">Hugging Face Space</a>
             </p>
-                <p class="mt-3">
-                    <strong>2017/03/10,Optimization for Training Deep Models @ Deep Learning Book Chapter 8</strong>
-                </p>
                 <p>
-                    <a href="https://www.youtube.com/watch?v=DeXH5IMHfcs" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i> Video: Optimization Techniques for Training Deep Models</a><br>
-                    <span class="text-xs text-slate-500">(Covers concepts like SGD, Momentum, NAG, Batch Normalization, and more, based on the book chapter.)</span>
+                    <a href="https://www.youtube.com/watch?v=DeXH5IMHfcs" target="_blank" rel="noopener noreferrer"><i class="fab fa-youtube mr-1"></i><strong>2017/03/10, Optimization for Training Deep Models @ Deep Learning Book Chapter 8</strong></a><br>
                 </p>
             </div>
         </div>
